k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: islamic-app
  labels:
    name: islamic-app
    app: islamic-app
---
